--- a/src/app/components/day.module.css
+++ b/src/app/components/day.module.css
@@ -1,19 +1,7 @@
 .imgSection {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  max-width: 50vw;
-}
-
-.description,
-.copyrigth,
-.wrapper p {
-  color: #1f306e;
-}
-
-.description {
-  font-size: 16px;
-  line-height: 1.5;
+  max-width: 90vw;
 }
 
 .copyrigth,
@@ -23,7 +11,6 @@
 
 .copyrigth {
   align-self: flex-start;
-  line-height: 1.5;
 }
 
 .wrapper {
@@ -37,13 +24,12 @@
   margin-top: 5px;
 }
 
-.originalImage,
-.processedImages {
+.next,
+.imgproxy {
   max-width: 47%;
+  padding-bottom: 35px;
 }
 
-.originalImage {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.next img {
+  position: relative !important;
 }
