--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,10 +3,16 @@
   justify-content: center;
   max-width: 1440px;
   width: 100%;
-  margin-top: 55px;
+  margin: 55px 20px 20px;
+}
+
+.title {
+  margin-bottom: 12px;
 }
 
 .menu {
+  flex-shrink: 0;
+  margin-top: 38px;
   margin-right: 45px;
 }
 
@@ -14,9 +20,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0;
-  padding-left: 0;
-  list-style: none;
+  margin-top: 10px;
 }
 
 .list li:not(:first-child) {
@@ -38,4 +42,8 @@
 .linkActive {
   color: #f5487f;
   cursor: default;
+}
+
+.intro + .intro {
+  margin-top: 15px;
 }
