--- a/src/app/components/clientToggle.module.css
+++ b/src/app/components/clientToggle.module.css
@@ -2,6 +2,10 @@
   display: flex;
   align-self: center;
   margin-top: 30px;
+
+  @media (max-width: 650px) {
+    align-self: flex-start;
+  }
 }
 
 .input {
