--- a/src/app/components/intro.module.css
+++ b/src/app/components/intro.module.css
@@ -1,82 +1,20 @@
 .wrapper {
   display: flex;
-  margin-top: 35px;
+  margin-top: 20px;
 
   @media (max-width: 650px) {
     flex-direction: column;
-    margin-top: 15px;
-  }
-}
-
-.menu {
-  flex-shrink: 0;
-  margin-right: 45px;
-
-  @media (max-width: 650px) {
-    margin-right: 0;
-  }
-}
-
-.list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 10px;
-
-  @media (max-width: 650px) {
-    flex-direction: row;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    gap: 6px;
-  }
-}
-
-.list li:not(:first-child) {
-  margin-top: 10px;
-
-  @media (max-width: 650px) {
     margin-top: 0;
-    margin-bottom: 8px;
   }
 }
 
-.link {
-  text-decoration: none;
-  color: #1f306e;
-  transition-duration: 0.3s;
-  transition-property: color;
-  cursor: pointer;
-
-  @media (max-width: 650px) {
-    padding: 5px 10px;
-    color: #ffffff;
-    background-color: #1f306e;
-    border-radius: 5px;
-    opacity: 0.6;
-  }
-}
-
-.link:hover:not(.linkActive) {
+.title {
+  margin-top: 15px;
   color: #c7417b;
-
-  @media (max-width: 768px) {
-    color: #1f306e;
-  }
-
-  @media (max-width: 650px) {
-    color: #ffffff;
-  }
 }
 
-.linkActive {
-  color: #f5487f;
-  cursor: default;
-
-  @media (max-width: 650px) {
-    color: #ffffff;
-    background-color: #c7417b;
-    opacity: 1;
-  }
+.title + p {
+  margin-top: 6px;
 }
 
 .textWrapper {
@@ -87,4 +25,19 @@
 
 .intro + .intro {
   margin-top: 15px;
+}
+
+.link {
+  text-decoration: none;
+  color: #c7417b;
+  transition-duration: 0.3s;
+  transition-property: color;
+}
+
+.link:hover {
+  color: #8f3b76;
+
+  @media (max-width: 768px) {
+    color: #c7417b;
+  }
 }
