--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -10,6 +10,34 @@
   }
 }
 
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
+}
+
 .title {
   margin-bottom: 12px;
+  color: #f5487f;
+}
+
+.link {
+  height: fit-content;
+  font-size: 12px;
+  text-decoration: none;
+  color: #1f306e;
+  opacity: 0.6;
+  transition-duration: 0.3s;
+  transition-property: opacity;
+}
+
+.link:hover {
+  opacity: 1;
+
+  @media (max-width: 768px) {
+    opacity: 0.6;
+  }
 }
