--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ pre {
   margin: 0;
   font-size: 14px;
   color: #1f306e;
-  background-color: #ebf1f4;
+  background-color: #dfe4eb;
   border-radius: 2px;
 }
 
