--- a/src/app/components/clientImageSection.module.css
+++ b/src/app/components/clientImageSection.module.css
@@ -1,18 +1,10 @@
-.wrapper {
-  display: flex;
-  width: 100%;
-  min-height: 370px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-
-  @media (max-width: 768px) {
-    flex-direction: column;
-    margin-top: 15px;
-  }
-}
-
 .imgSection {
-  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 65%;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 
 .info {
@@ -60,19 +52,4 @@
   align-self: flex-start;
   margin-top: 10px;
   font-size: 12px;
-}
-
-.textWrapper {
-  margin-left: 60px;
-
-  @media (max-width: 768px) {
-    order: 1;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    margin-left: 0;
-  }
-}
-
-.textWrapper p {
-  margin-top: 10px;
 }
