--- a/src/app/components/clientSizeSection.module.css
+++ b/src/app/components/clientSizeSection.module.css
@@ -1,10 +1,11 @@
 .wrapper {
   width: fit-content;
-  margin-bottom: 15px;
+  margin-top: 20px;
+  margin-bottom: 30px;
   padding: 6px 20px 6px 6px;
   font-family: monospace;
   font-size: 16px;
-  background-color: #ebf1f4;
+  background-color: #dfe4eb;
   border-radius: 2px;
 
   @media (max-width: 768px) {
