added mobile styles, changed dimensional image calculation

--- a/src/app/components/clientMainContent.module.css
+++ b/src/app/components/clientMainContent.module.css
@@ -3,4 +3,9 @@
   width: 70%;
   padding-top: 45px;
   padding-bottom: 20px;
+
+  @media (max-width: 768px) {
+    width: 100%;
+    padding-top: 20px;
+  }
 }
