--- a/src/app/components/clientImageSection.module.css
+++ b/src/app/components/clientImageSection.module.css
@@ -5,6 +5,12 @@
   width: 65%;
   padding-right: 30px;
   padding-left: 30px;
+
+  @media (max-width: 768px) {
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
 
 .info {
@@ -12,6 +18,10 @@
   text-align: center;
   color: #1f306e;
   font-style: italic;
+
+  @media (max-width: 768px) {
+    order: 3;
+  }
 }
 
 .list {
@@ -20,12 +30,33 @@
   margin-top: 5px;
   gap: 10px;
 
-  @media (max-width: 650px) {
-    justify-content: space-between;
+  @media (max-width: 768px) {
+    order: 2;
   }
 }
 
+.link {
+  opacity: 0.6;
+  transition-duration: 0.3s;
+  transition-property: opacity;
+  cursor: pointer;
+}
+
+.linkActive {
+  opacity: 1;
+}
+
+.link:hover {
+  opacity: 1;
+}
+
+.linkImg {
+  width: 35px;
+  height: 35px;
+}
+
 .imageWrapper {
+  position: relative;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -34,8 +65,9 @@
   min-height: 300px;
 
   @media (max-width: 768px) {
-    order: 2;
+    order: 1;
     width: 100%;
+    min-height: 150px;
   }
 }
 
@@ -49,7 +81,17 @@
 }
 
 .copyrigth {
-  align-self: flex-start;
-  margin-top: 10px;
-  font-size: 12px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 2px 4px;
+  font-size: 10px;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(5px);
+  font-style: italic;
+
+  @media (max-width: 768px) {
+    font-size: 12px;
+  }
 }
