--- a/src/app/components/clientToolsPanel.module.css
+++ b/src/app/components/clientToolsPanel.module.css
@@ -2,9 +2,17 @@
   width: 35%;
 
   @media (max-width: 768px) {
-    order: 1;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    position: fixed;
+    top: 70vh;
+    left: 0;
+    z-index: 2;
+    width: 100vw;
+    padding: 40px 20px 20px 20px;
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(5px);
+    border-top-right-radius: 40px;
+    border-top-left-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
 }
 
@@ -17,6 +25,6 @@
   border-radius: 2px;
 }
 
-.textWrapper p {
+.text {
   margin-top: 10px;
 }
