--- a/src/app/components/sizeMeta.module.css
+++ b/src/app/components/sizeMeta.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  width: fit-content;
+  width: 100%;
   margin-top: 20px;
   margin-bottom: 30px;
   padding: 6px 20px 6px 6px;
@@ -7,12 +7,12 @@
   font-size: 16px;
   background-color: #dfe4eb;
   border-radius: 2px;
-
-  @media (max-width: 768px) {
-    width: 100%;
-  }
 }
 
-.wrapper .text {
-  margin-top: 0;
+@media (max-width: 768px) {
+  .wrapper {
+    width: 100%;
+    background-color: rgba(223, 228, 235, 0.7);
+    backdrop-filter: blur(5px);
+  }
 }
