--- a/src/app/components/clientImageSection.module.css
+++ b/src/app/components/clientImageSection.module.css
@@ -53,6 +53,7 @@
 .linkImg {
   width: 35px;
   height: 35px;
+  background-color: #e4e2ea;
 }
 
 .imageWrapper {
@@ -62,7 +63,7 @@
   flex-direction: column;
   align-items: center;
   width: 500px;
-  min-height: 300px;
+  min-height: 250px;
 
   @media (max-width: 768px) {
     order: 1;
