--- a/src/app/components/clientImageSection.module.css
+++ b/src/app/components/clientImageSection.module.css
@@ -58,7 +58,6 @@
 
 .imageWrapper {
   position: relative;
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -70,6 +69,27 @@
     width: 100%;
     min-height: 150px;
   }
+}
+
+.loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: #e4e2ea;
+  opacity: 1;
+  transition-duration: 0.3s;
+  transition-property: opacity;
+  font-style: italic;
+}
+
+.loaderHidden {
+  opacity: 0;
 }
 
 .imageWrapper img {
