--- a/src/app/components/clientToolsPanel.module.css
+++ b/src/app/components/clientToolsPanel.module.css
@@ -9,11 +9,48 @@
     width: 100vw;
     padding: 40px 20px 20px 20px;
     background-color: rgba(255, 255, 255, 0.7);
+    transition-duration: 0.3s;
+    transition-property: top;
     backdrop-filter: blur(5px);
     border-top-right-radius: 40px;
     border-top-left-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
+}
+
+.textWrapperOpened {
+  @media (max-width: 768px) {
+    top: 30vh;
+    height: 70vh;
+    overflow-y: scroll;
+  }
+}
+
+.button {
+  display: none;
+
+  @media (max-width: 768px) {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    z-index: 2;
+    display: block;
+    width: 40px;
+    height: 6px;
+    background-color: #a0a0a0;
+    border: none;
+    border-radius: 4px;
+    transform: translateX(-50%);
+  }
+}
+
+.swipe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100vw;
+  height: 40px;
 }
 
 .code {
