--- a/src/app/components/options.module.css
+++ b/src/app/components/options.module.css
@@ -38,10 +38,20 @@
   cursor: pointer;
 }
 
+.codeWrapper {
+  margin-top: 20px;
+}
+
 .code {
+  margin-top: 4px;
   padding: 10px 20px;
   white-space: pre-wrap;
   overflow-x: scroll;
+
+  @media (max-width: 768px) {
+    background-color: rgba(223, 228, 235, 0.7);
+    backdrop-filter: blur(5px);
+  }
 }
 
 .code p {
