--- a/src/app/components/intro.module.css
+++ b/src/app/components/intro.module.css
@@ -52,12 +52,23 @@
 }
 
 .title {
-  margin-top: 15px;
   color: #c7417b;
+
+  @media (max-width: 650px) {
+    margin-top: 15px;
+  }
 }
 
 .title + p {
   margin-top: 6px;
+}
+
+p + .title {
+  margin-top: 30px;
+
+  @media (max-width: 650px) {
+    margin-top: 15px;
+  }
 }
 
 .intro + .intro {
