--- a/src/app/components/intro.module.css
+++ b/src/app/components/intro.module.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   width: 30%;
-  padding: 105px 35px 20px;
+  padding: 30px 35px 20px;
   background-color: #ffffff;
 
-  @media (max-width: 768px) {
+  @media (max-width: 1199px) {
     width: 100%;
     padding: 20px 0;
     background-color: #f2f1f5;
@@ -21,9 +21,11 @@
   max-width: 1440px;
   width: calc(100vw - 40px);
 
-  @media (max-width: 650px) {
+  @media (max-width: 1199px) {
     position: static;
-    flex-direction: column;
+    flex-direction: row;
+    margin-bottom: 10px;
+    flex-wrap: wrap;
   }
 }
 
@@ -33,6 +35,7 @@
 }
 
 .source {
+  display: none;
   height: fit-content;
   font-size: 12px;
   text-decoration: none;
@@ -40,13 +43,9 @@
   opacity: 0.6;
   transition-duration: 0.3s;
   transition-property: opacity;
-}
 
-.source:hover {
-  opacity: 1;
-
-  @media (max-width: 768px) {
-    opacity: 0.6;
+  @media (max-width: 1199px) {
+    display: block;
   }
 }
 
@@ -83,7 +82,7 @@ p + .title {
   font-size: 12px;
   font-style: italic;
 
-  @media (max-width: 768px) {
+  @media (max-width: 1199px) {
     margin-top: 20px;
   }
 }
@@ -98,7 +97,7 @@ p + .title {
 .link:hover {
   color: #8f3b76;
 
-  @media (max-width: 768px) {
+  @media (max-width: 1199px) {
     color: #c7417b;
   }
 }
